--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
             <div class="panel-content">
                 <div class="climate-metric">
                     <span class="metric-label">Current Temperature</span>
-                    <span class="metric-value warning" id="currentTemp">+2.1°C</span>
+                    <span class="metric-value warning" id="currentTemp">Loading...</span>
+                </div>
+                <div class="climate-metric">
+                    <span class="metric-label">Weather Conditions</span>
+                    <span class="metric-value" id="weatherConditions">-</span>
+                </div>
+                <div class="climate-metric">
+                    <span class="metric-label">Humidity</span>
+                    <span class="metric-value" id="humidity">-</span>
                 </div>
                 <div class="climate-metric">
                     <span class="metric-label">Sea Level Rise</span>
